# unitree_webrtc_connect

./: pyproject.toml  pyrightconfig.json  ruff.toml
examples/go2/audio/internet_radio/: stream_radio.py
examples/go2/audio/live_audio/: live_recv_audio.py
examples/go2/audio/mp3_player/: play_mp3.py  webrtc_audio_player.py
examples/go2/audio/save_audio/: save_audio_to_file.py
examples/go2/data_channel/lidar/: lidar_stream.py  plot_lidar_stream.py
examples/go2/data_channel/lowstate/: lowstate.py
examples/go2/data_channel/multiplestate/: multiplestate.py
examples/go2/data_channel/sportmode/: sportmode.py
examples/go2/data_channel/sportmodestate/: sportmodestate.py
examples/go2/data_channel/vui/: vui.py
examples/go2/video/camera_stream/: display_video_channel.py
unitree_webrtc_connect/: constants.py  encryption.py  multicast_scanner.py  unitree_auth.py  util.py  webrtc_audio.py  webrtc_audiohub.py  webrtc_datachannel.py  webrtc_driver.py  webrtc_video.py
unitree_webrtc_connect/lidar/: lidar_decoder_native.py
unitree_webrtc_connect/msgs/: error_handler.py  future_resolver.py  heartbeat.py  pub_sub.py  rtc_inner_req.py  validation.py
